worked on jira ticket 106 and spacemanagement in Vh

--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -15229,6 +15229,9 @@ a.joinmeetingtab {
     .openScnd{
     margin-left: 20px;
       }
+      .colorspace input{
+        width: 90%;
+      }
    
     }
 
