--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -15234,5 +15234,11 @@ a.joinmeetingtab {
       }
    
     }
+    @media screen and (min-width: 960px) and (max-width: 1200px){
+      .colorspace input{
+          width: 90%;
+        }
+     
+      } 
 
    
