--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13639,7 +13639,7 @@ iframe.stripe_checkout_app {
     color: red!important;
 }
 .SetWidthPopup1{
-    width: 400px !important;
+    max-width: 400px !important;
     text-align: center;
     max-height: 85%;
     overflow: hidden;
