--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -15294,3 +15294,9 @@ a.joinmeetingtab {
     padding: 30px 15px;
   }
 }
+
+.allDrList3{
+    height: 680px;
+    overflow-y: scroll;
+    padding: 10px 0px;
+}
