--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -15222,18 +15222,16 @@ a.joinmeetingtab {
 @media (max-width: 350px) {
   .openScnd {
     margin-left: 20px;
-      }
-      .colorspace input{
-        width: 90%;
-      }
-   
-    }
-    @media screen and (min-width: 960px) and (max-width: 1200px){
-      .colorspace input{
-          width: 90%;
-        }
-     
-      } 
+  }
+  .colorspace input {
+    width: 90%;
+  }
+}
+@media screen and (min-width: 960px) and (max-width: 1200px) {
+  .colorspace input {
+    width: 90%;
+  }
+}
 
 .dobCertSec .ant-picker {
   border: none;
@@ -15295,9 +15293,47 @@ a.joinmeetingtab {
   }
 }
 
+.allDrList3 {
+  height: 680px;
+  overflow-y: scroll;
+  padding: 10px 0px;
+}
 
-.allDrList3{
-    height: 680px;
-    overflow-y: scroll;
-    padding: 10px 0px;
+
+
+
+
+
+.nwDiaCntnt2 {
+  max-width: 480px !important;
+  padding: 1px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background: #fff;
+  margin: 0 auto;
+  border: none;
+  outline: none;
+  border-radius: 12px;
+  background-color: #ffffff;
+  box-shadow: 0 24px 32px 0 rgb(0 8 8 / 8%);
+  margin-top: 35px;
+}
+.allCreInfSec {
+  margin-left: 10px;
+}
+.allCreInfSec2 {
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+.allCreInfSec, .allCreInfSec2{
+  margin-top:10px;
+}
+.creatInfoTwo input{
+  min-height: 40px;
+}
+.allCreInfSec2 button{
+  margin:0px;
+  width:100%;
+  padding:8px 8px;
 }
