--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -15104,7 +15104,9 @@ a.joinmeetingtab {
   font-family: Mulish, sans-serif;
   border-radius: 6px;
   border: 1px solid grey;
+  width:160px
 }
+
 .certificatePrice label {
   font-family: Mulish, sans-serif;
   color: #7f8383;
@@ -15305,4 +15307,20 @@ a.joinmeetingtab {
     height: 680px;
     overflow-y: scroll;
     padding: 10px 0px;
+}
+
+@media screen and (max-width:399px) {
+  .euroamount {
+    position: absolute;
+    top: 37px;
+    left: 155px;
+  }
+}
+
+@media screen and (min-width:400px) and (max-width:430px){
+  .euroamount {
+    position: absolute;
+    top: 7px;
+    left: 315px;
+  }
 }
