worked on jira ticket 128

--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -15154,7 +15154,7 @@ a.joinmeetingtab {
 .euroamount {
   position: absolute;
   top: 8px;
-  left: 315px;
+  left: 307px;
   color: grey;
   font-weight: 600;
 }
@@ -15302,7 +15302,6 @@ a.joinmeetingtab {
   }
 }
 
-
 .allDrList3{
     height: 680px;
     overflow-y: scroll;
@@ -15323,4 +15322,66 @@ a.joinmeetingtab {
     top: 7px;
     left: 315px;
   }
+}
+
+.InfoOutLinees {
+  color: red;
+  font-size: 20px!important;
+  margin-right: 20px;
+}
+
+ .InfoOutLinees:hover + .assignHoses.Paymentpending {
+  display: block !important;
+}
+.InfoOutLinees:hover + .assignHoses.appointmentTime {
+  display: block !important;
+} 
+.Paymentpending {
+  color: red;
+  background-color: #ffffff;
+  text-align: center;
+  padding: 7px;
+  position: absolute;
+  right: -20px;
+  border-radius: 10px;
+  width: 135px;
+  border: 1px #cccc solid;
+  z-index: 99999999;
+}
+.assignHoses.Paymentpending {
+  display: none;
+}
+.darktheme .assignHoses .Paymentpending {
+  background: #192020 !important;
+  
+}
+.assignHoses {
+  font-size: 14px !important;
+  font-weight: 600 !important;
+  padding-bottom: 10px !important;
+}
+.appointmentTime {
+  color: red;
+  background-color: #ffffff;
+  padding: 7px;
+  position: absolute;
+  right: -20px;
+  border-radius: 10px;
+  width: 135px;
+  border: 1px #cccc solid;
+  z-index: 99999999;
+  
+}
+
+.darkTheme .appointmentTime {
+  background: #192020 !important;
+  color:red!important
+}
+.darkTheme .Paymentpending {
+  background: #192020 !important;
+  color:red!important
+}
+
+.assignHoses.appointmentTime {
+  display: none;
 }
