--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -15100,10 +15100,11 @@ a.joinmeetingtab {
 .certificatePrice input {
   margin-left: 20px;
   padding: 6px;
-  text-align: center;
+  /* text-align: center; */
   font-family: Mulish, sans-serif;
   border-radius: 6px;
   border: 1px solid grey;
+  width:100%;
 }
 .certificatePrice label {
   font-family: Mulish, sans-serif;
@@ -15139,7 +15140,7 @@ a.joinmeetingtab {
   cursor: pointer;
 }
 .certificatePrice img {
-  margin-left: 10px;
+  margin-left: 30px;
 }
 .darkTheme .certificatePrice input {
   background: #192020 !important;
@@ -15152,9 +15153,10 @@ a.joinmeetingtab {
 .euroamount {
   position: absolute;
   top: 8px;
-  left: 315px;
+  /* left: 186px; */
   color: grey;
   font-weight: 600;
+  right: -10px;
 }
 
 @media (max-width: 500px) {
@@ -15212,13 +15214,13 @@ a.joinmeetingtab {
 .fixedEuro {
   position: relative;
 }
-@media (max-width: 430px) {
+/* @media (max-width: 430px) {
   .euroamount {
     position: absolute;
     top: 38px;
     left: 140px;
   }
-}
+} */
 @media (max-width: 500px) {
   .openScnd {
     margin-top: 10px;
@@ -15341,4 +15343,17 @@ a.joinmeetingtab {
   margin:0px;
   width:100%;
   padding:8px 8px;
+}
+
+
+
+
+
+.allCertSec{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.certificatePrice label{
+  margin-bottom: 0px;
 }
