--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -16556,7 +16556,7 @@ select:-webkit-autofill:focus {
 .creatTaskCntnt {
     height: 537px;
     overflow-y: scroll;
-    padding: 20px 0px;
+    /* padding: 20px 0px; */
 }
 .creatLbl {
     padding: 0px 20px;
